I've implemented the calculator into CalcModel (which is connected to the GUI), which now works with the calculator gui depending on which radio button you have pressed. I adjusted the gui so it displays the results in the center of its textfield. I noticed that the Infix calculator would still output results for Reverse Polish notation so I added verification to make sure an infix expression was given. I also added verification within CalcJavaFx to account for the INFINITY given by dividing by zero/overflow with floats.

--- a/calculator/src/main/resources/calcGui.css
+++ b/calculator/src/main/resources/calcGui.css
@@ -13,6 +13,7 @@
     -fx-text-fill: rgb(254, 224, 255);
     /* -fx-text-stroke-color: #000000; */
     -fx-text-stroke: 3px;
+    -fx-alignment: center;
 }
 .expression{
     -fx-background-color: #00000080;
